NATTQA-ENV/force-app/main/default/objects/Engine_Authorization_Request__c/Engine_Authorization_Request__c.object-meta.xml
<CustomObject>
    <label>Engine Authorization Request</label>
    <nameField>
        <displayFormat>EAR-{000000}</displayFormat>
        <label>Engine Authorization Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engine Authorization Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>