NATTQA-ENV/force-app/main/default/objects/Engine_Authorization_Request__c/fields/CTM_Authorization_Name__c.field-meta.xml
<CustomField>
    <fullName>CTM_Authorization_Name__c</fullName>
    <label>Authorization Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>