NATTQA-ENV/force-app/main/default/objects/Engine_Authorization_Request__c/fields/CTM_Auto_Start_Stop__c.field-meta.xml
<CustomField>
    <fullName>CTM_Auto_Start_Stop__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto-Start Stop</label>
    <type>Checkbox</type>
</CustomField>