NATTQA-ENV/force-app/main/default/objects/Engine_Authorization_Request__c/fields/CTM_Client_Address__c.field-meta.xml
<CustomField>
    <fullName>CTM_Client_Address__c</fullName>
    <label>Client Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>