NATTQA-ENV/force-app/main/default/objects/Engine_Authorization_Request__c/fields/CTM_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>CTM_Client_Name__c</fullName>
    <label>Client Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>