NATTQA-ENV/force-app/main/default/objects/Engine_Authorization_Request__c/fields/CTM_Client_State__c.field-meta.xml
<CustomField>
    <fullName>CTM_Client_State__c</fullName>
    <label>Client State</label>
    <length>40</length>
    <type>Text</type>
</CustomField>