NATTQA-ENV/force-app/main/default/objects/Engine_Authorization_Request__c/fields/CTM_Comments__c.field-meta.xml
<CustomField>
    <fullName>CTM_Comments__c</fullName>
    <label>Comments</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>