NATTQA-ENV/force-app/main/default/objects/Engine_Authorization_Request__c/fields/CTM_Continuous_Run__c.field-meta.xml
<CustomField>
    <fullName>CTM_Continuous_Run__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Continuous Run</label>
    <type>Checkbox</type>
</CustomField>