NATTQA-ENV/force-app/main/default/objects/Engine_Authorization_Request__c/fields/CTM_Date__c.field-meta.xml
<CustomField>
    <fullName>CTM_Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>