NATTQA-ENV/force-app/main/default/objects/Engine_Authorization_Request__c/fields/CTM_Date_Today__c.field-meta.xml
<CustomField>
    <fullName>CTM_Date_Today__c</fullName>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Today</label>
    <type>Date</type>
</CustomField>