NATTQA-ENV/force-app/main/default/objects/Engine_Authorization_Request__c/fields/CTM_Distributor_City__c.field-meta.xml
<CustomField>
    <fullName>CTM_Distributor_City__c</fullName>
    <label>Distributor City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>