NATTQA-ENV/force-app/main/default/objects/Engine_Authorization_Request__c/fields/CTM_Engine_Series__c.field-meta.xml
<CustomField>
    <fullName>CTM_Engine_Series__c</fullName>
    <label>Engine Series</label>
    <length>255</length>
    <type>Text</type>
</CustomField>