NATTQA-ENV/force-app/main/default/objects/Engine_Authorization_Request__c/fields/CTM_Fault_Description__c.field-meta.xml
<CustomField>
    <fullName>CTM_Fault_Description__c</fullName>
    <label>Fault Description</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>