NATTQA-ENV/force-app/main/default/objects/Engine_Authorization_Request__c/fields/CTM_Frozen__c.field-meta.xml
<CustomField>
    <fullName>CTM_Frozen__c</fullName>
    <label>Frozen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>