NATTQA-ENV/force-app/main/default/objects/Engine_Authorization_Request__c/fields/CTM_Low_Pressure_Switch__c.field-meta.xml
<CustomField>
    <fullName>CTM_Low_Pressure_Switch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Low Pressure Switch</label>
    <type>Checkbox</type>
</CustomField>