NATTQA-ENV/force-app/main/default/objects/Engine_Authorization_Request__c/fields/CTM_Mixture__c.field-meta.xml
<CustomField>
    <fullName>CTM_Mixture__c</fullName>
    <label>Mixture</label>
    <length>255</length>
    <type>Text</type>
</CustomField>