NATTQA-ENV/force-app/main/default/objects/Engine_Authorization_Request__c/fields/CTM_Oil_Change_Frequency__c.field-meta.xml
<CustomField>
    <fullName>CTM_Oil_Change_Frequency__c</fullName>
    <label>Oil Change Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>