NATTQA-ENV/force-app/main/default/objects/Engine_Authorization_Request__c/fields/CTM_Perishable__c.field-meta.xml
<CustomField>
    <fullName>CTM_Perishable__c</fullName>
    <label>Perishable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>