NATTQA-ENV/force-app/main/default/objects/Engine_Authorization_Request__c/fields/CTM_Repair_Description__c.field-meta.xml
<CustomField>
    <fullName>CTM_Repair_Description__c</fullName>
    <label>Repair Description</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>