NATTQA-ENV/force-app/main/default/objects/Engine_Authorization_Request__c/fields/CTM_Set_Point__c.field-meta.xml
<CustomField>
    <fullName>CTM_Set_Point__c</fullName>
    <label>Set Point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>