NATTQA-ENV/force-app/main/default/objects/Engine_Authorization_Request__c/fields/CTM_Unit_Maintained_By__c.field-meta.xml
<CustomField>
    <fullName>CTM_Unit_Maintained_By__c</fullName>
    <label>Unit Maintained By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dealer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>