NATTQA-ENV/force-app/main/default/objects/Engine_Authorization_Request__c/fields/CTM_Warranty_Claim_Number__c.field-meta.xml
<CustomField>
    <fullName>CTM_Warranty_Claim_Number__c</fullName>
    <label>Warranty Claim Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>