NATTQA-ENV/force-app/main/default/objects/Engine_Authorization_Request__c/fields/CTM_Water_Temperature_Switch__c.field-meta.xml
<CustomField>
    <fullName>CTM_Water_Temperature_Switch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Water Temperature Switch</label>
    <type>Checkbox</type>
</CustomField>