NATTQA-ENV/force-app/main/default/objects/Engine_Authorization_Request__c/fields/NATT_Authorization_Number__c.field-meta.xml
<CustomField>
    <fullName>NATT_Authorization_Number__c</fullName>
    <label>Authorization Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>