NATTQA-ENV/force-app/main/default/objects/Engine_Authorization_Request__c/fields/NATT_Case__c.field-meta.xml
<CustomField>
    <fullName>NATT_Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Engine Authorization Requests</relationshipLabel>
    <relationshipName>Engine_Authorization_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>