NATTQA-ENV/force-app/main/default/objects/Engine_Authorization_Request__c/fields/NATT_Compression_Units__c.field-meta.xml
<CustomField>
    <fullName>NATT_Compression_Units__c</fullName>
    <inlineHelpText>This value applies to all cylinders</inlineHelpText>
    <label>Compression Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>psig</fullName>
                <default>true</default>
                <label>psig</label>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>