NATTQA-ENV/force-app/main/default/objects/Engine_Authorization_Request__c/fields/NATT_Cylinder_1__c.field-meta.xml
<CustomField>
    <fullName>NATT_Cylinder_1__c</fullName>
    <label>Cylinder 1</label>
    <length>20</length>
    <type>Text</type>
</CustomField>