NATTQA-ENV/force-app/main/default/objects/Engine_Authorization_Request__c/fields/NATT_Date_in_Service__c.field-meta.xml
<CustomField>
    <fullName>NATT_Date_in_Service__c</fullName>
    <label>Date in Service</label>
    <type>Date</type>
</CustomField>