NATTQA-ENV/force-app/main/default/objects/Engine_Authorization_Request__c/fields/NATT_Description__c.field-meta.xml
<CustomField>
    <fullName>NATT_Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>