NATTQA-ENV/force-app/main/default/objects/Engine_Authorization_Request__c/fields/NATT_Engine_Hours__c.field-meta.xml
<CustomField>
    <fullName>NATT_Engine_Hours__c</fullName>
    <label>Engine Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>