NATTQA-ENV/force-app/main/default/objects/Engine_Authorization_Request__c/fields/NATT_Fail_Date__c.field-meta.xml
<CustomField>
    <fullName>NATT_Fail_Date__c</fullName>
    <label>Fail Date</label>
    <type>Date</type>
</CustomField>