NATTQA-ENV/force-app/main/default/objects/Engine_Authorization_Request__c/fields/NATT_Injector_2__c.field-meta.xml
<CustomField>
    <fullName>NATT_Injector_2__c</fullName>
    <label>Injector 2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>