NATTQA-ENV/force-app/main/default/objects/Engine_Authorization_Request__c/fields/NATT_Logged_DCP_Faults_APU_Only__c.field-meta.xml
<CustomField>
    <fullName>NATT_Logged_DCP_Faults_APU_Only__c</fullName>
    <label>Logged DCP Faults (APU Only)</label>
    <type>TextArea</type>
</CustomField>