NATTQA-ENV/force-app/main/default/objects/Engine_Authorization_Request__c/fields/NATT_Maintenance_and_Repair_Records__c.field-meta.xml
<CustomField>
    <fullName>NATT_Maintenance_and_Repair_Records__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Attach file</inlineHelpText>
    <label>Maintenance and Repair Records</label>
    <type>Checkbox</type>
</CustomField>