NATTQA-ENV/force-app/main/default/objects/Engine_Authorization_Request__c/fields/NATT_Model_Number_2__c.field-meta.xml
<CustomField>
    <fullName>NATT_Model_Number_2__c</fullName>
    <description>Unit model number</description>
    <formula>NATT_Case__r.NATT_Model_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Model Number</label>
    <type>Text</type>
</CustomField>