NATTQA-ENV/force-app/main/default/objects/Engine_Authorization_Request__c/fields/NATT_Model_Number__c.field-meta.xml
<CustomField>
    <fullName>NATT_Model_Number__c</fullName>
    <label>(deprecated) Model Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>