NATTQA-ENV/force-app/main/default/objects/Engine_Authorization_Request__c/fields/NATT_Unit_Download_ZAX__c.field-meta.xml
<CustomField>
    <fullName>NATT_Unit_Download_ZAX__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Attach file</inlineHelpText>
    <label>Unit Download ZAX</label>
    <type>Checkbox</type>
</CustomField>