NATTQA-ENV/force-app/main/default/objects/Engine_Authorization_Request__c/fields/NATT_Unit_Serial_Number_2__c.field-meta.xml
<CustomField>
    <fullName>NATT_Unit_Serial_Number_2__c</fullName>
    <description>Unit Serial Number</description>
    <formula>NATT_Case__r.NATT_Serial_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Serial Number</label>
    <type>Text</type>
</CustomField>