NATTQA-ENV/force-app/main/default/objects/Engine_Authorization_Request__c/fields/NATT_Unit_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>NATT_Unit_Serial_Number__c</fullName>
    <label>(deprecated) Unit Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>