NATTQA-ENV/force-app/main/default/objects/Engine_Authorization_Request__c/validationRules/EAR_Description_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>EAR_Description_Required</fullName>
    <active>true</active>
    <description>The description should be completed for all Engine Authorization Requests</description>
    <errorConditionFormula>AND(NATT_Description__c = &apos;&apos;,
BEGINS(NATT_Case__r.RecordType.DeveloperName, &apos;NATT&apos;))</errorConditionFormula>
    <errorDisplayField>NATT_Description__c</errorDisplayField>
    <errorMessage>Please describe the reason for the Engine Authorization Request</errorMessage>
</ValidationRule>