NATTQA-ENV/force-app/main/default/objects/Engine_Authorization_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NATT_Unit_Serial_Number_2__c</columns>
    <columns>NATT_Model_Number_2__c</columns>
    <columns>NATT_Date_in_Service__c</columns>
    <columns>NATT_Fail_Date__c</columns>
    <columns>NATT_Engine_Hours__c</columns>
    <columns>NATT_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <roleAndSubordinates>NA</roleAndSubordinates>
    </sharedTo>
</ListView>